# Bot-Pomodoro-Zed

./: Cargo.toml  LICENSE  README.md  extension.toml  install.ps1
src/: lib.rs
